# Projeto-IES

./: README.md
VAMS/project/: .env  Endpoint_List.md  docker-compose.yml  nginx.conf
VAMS/project/Generators/volcano-info-gen/: Dockerfile  README.md  pyproject.toml
VAMS/project/Generators/volcano-info-gen/volcano_info_gen/: data_gen.py  earthquake_data_gen.py  erosion_data_gen.py  eruption_data_gen.py  gases_data_gen.py  humidity_data_gen.py  magma_data_gen.py  pressure_data_gen.py  soil_data_gen.py  temperature_data_gen.py  volcano_initializer.py  wind_data_gen.py
VAMS/project/VAMS-Backend/: Dockerfile  README.md  init-schema.sh  pom.xml
VAMS/project/VAMS-Frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
VAMS/project/VAMS-Frontend/src/: index.css  main.tsx  routes.tsx
VAMS/project/VAMS-Frontend/src/components/: AlertDownload.tsx  DatePickerWithRange.tsx  DialogDownload.tsx  DialogEditVolcano.tsx  DotLineChart.tsx  EarthquakesTable.tsx  Footer.tsx  GasIndicatorTable.tsx  HistoryTable.tsx  InteractiveLineChart.tsx  Layout.tsx  MagmaTable.tsx  Map.tsx  MultiLineChart.tsx  NavBar.tsx  PieCharts.tsx  ScrollTop.tsx  SelectGases.tsx  SelectVolcano.tsx  ToastWithTitle.tsx  ViewingData.tsx  WeatherInfo.tsx
VAMS/project/VAMS-Frontend/src/pages/: AboutUsPage.tsx  ContactsPage.tsx  EarthquakesPage.tsx  HomePage.tsx  MagmaPage.tsx  SoilAnalysisPage.tsx  VolcanicGasesPage.tsx  VolcanicHistoryPage.tsx  WeatherPage.tsx
VAMS/project/VAMS-Frontend/src/utils/: VolcanoContext.tsx  downloadUtils.tsx  (+2 more)
(+77 files in other folders)
